Fix blurriness on Chrome due to spinner

--- a/css/style.scss
+++ b/css/style.scss
@@ -107,7 +107,7 @@ path {
     width:60%;
     margin:0 auto;
     position:absolute;
-    top:50%;
+    top:38%;
     left:50%;
     transform:translate(-50%, -50%);
     -webkit-transform:translate(-50%, -50%);
@@ -426,19 +426,19 @@ li {
 }
 
 .loader {
-  margin: 60px auto;
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
+  // margin: 60px auto;
+  // font-size: 10px;
+  // position: relative;
+  // text-indent: -9999em;
   border-top: 1.1em solid rgba(0, 0, 0, 0.08);
   border-right: 1.1em solid rgba(0, 0, 0, 0.08);
   border-bottom: 1.1em solid rgba(0, 0, 0, 0.08);
   border-left: 1.1em solid black;
 
-  border-top: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-left: 10px solid black;
+  border-top: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
 
   // -webkit-transform: translateZ(0);
   // -ms-transform: translateZ(0);
@@ -450,8 +450,8 @@ li {
 .loader,
 .loader:after {
   border-radius: 50%;
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
 }
 @-webkit-keyframes load8 {
   0% {
@@ -474,3 +474,15 @@ li {
   }
 }
 
+#loader-container {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    margin: auto;
+    /* border: 1px solid black; */
+    box-sizing: border-box;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+}
